--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                   </div>
                 </div>
 
-                <button class="button is-primary" type="submit">Submit</button>
+                <button id="signup-submit-button" class="button is-primary" type="submit">Submit</button>
               </form>
             </div>
           </div>
@@ -84,7 +84,7 @@
                   </div>
                 </div>
 
-                <button class="button is-primary" type="submit">Submit</button>
+                <button id="login-submit-button" class="button is-primary" type="submit">Submit</button>
               </form>
             </div>
           </div>
