--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,9 @@
                   </div>
                 </div>
 
-                <button id="signup-submit-button" class="button is-primary" type="submit">Submit</button>
+                <button id="signup-submit-button" class="button is-primary" type="submit">
+                  Submit
+                </button>
               </form>
             </div>
           </div>
@@ -84,13 +86,21 @@
                   </div>
                 </div>
 
-                <button id="login-submit-button" class="button is-primary" type="submit">Submit</button>
+                <button id="login-submit-button" class="button is-primary" type="submit">
+                  Submit
+                </button>
               </form>
             </div>
           </div>
         </div>
         <button id="close-login-form" class="modal-close is-large" aria-label="close"></button>
       </div>
+
+      <li id="messages-list"></li>
+
+      <form id="chat-form" action="">
+        <input id="chat-message-input" autocomplete="off" /><button>Send</button>
+      </form>
     </section>
 
     <!-- Firebase -->
@@ -98,10 +108,12 @@
     <script src="https://www.gstatic.com/firebasejs/7.9.2/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.9.2/firebase-firestore.js"></script>
 
-    <script src="/jquery-3.4.1.js"></script>
+    <script src="/js/jquery-3.4.1.js"></script>
 
-    <script src="/scripts.js"></script>
-    <script src="/main.js"></script>
-    <script src="/auth.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="/js/scripts.js"></script>
+    <script src="/js/index.js"></script>
+    <script src="/js/main.js"></script>
+    <script src="/js/auth.js"></script>
   </body>
 </html>
