Formatting for chat ui

--- a/public/index.html
+++ b/public/index.html
@@ -96,10 +96,18 @@
         <button id="close-login-form" class="modal-close is-large" aria-label="close"></button>
       </div>
 
-      <li id="messages-list"></li>
+      <div>
+        <li id="messages-list"></li>
+      </div>
 
       <form id="chat-form" action="">
-        <input id="chat-message-input" autocomplete="off" /><button>Send</button>
+        <div>
+          <input id="chat-message-input" autocomplete="off" />
+        </div>
+
+        <div>
+          <button class="button is-primary">Send</button>
+        </div>
       </form>
     </section>
 
