Buttons for status bars

--- a/public/index.html
+++ b/public/index.html
@@ -150,6 +150,19 @@
           }
         </script>
       </div>
+
+      <div class="container">
+        <div class="columns">
+            <div class="column">
+            <button class="button is-warning is-large" id="button1">  Too Slow   </button>
+            </div>
+            <div class="column">
+                <button class="button is-success is-large" id="button2">  Fine   </button>
+            </div>
+            <div class="column">
+                <button class="button is-danger is-large" id="button3">  Too Fast   </button>
+            </div>
+        </div>
     </section>
 
     <!-- Firebase -->
